--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -26,7 +26,7 @@
     <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
     {% block header_extra %}{% endblock %}
 
-<style>
+    <style>
 .center {
 	display: block;
 	margin-left: auto;
@@ -56,7 +56,42 @@ a.active {
     text-decoration:none;
     border-color: darkgrey;
 }
-</style>
+.myctrl {
+    width: 30px;
+    height: 30px;
+}
+.myctrl span {
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -60%);
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+    </style>
   </head>
 
   <body style="overflow:auto; min-height: 100vh;   position: relative;   margin: 0;">
