--- a/kooplexhub/hub/templates/navbar.html
+++ b/kooplexhub/hub/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <!-- fixme style fixed-top makes part of pane disapperar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a href="{% url 'indexpage' %}" class="navbar-brand"><img src="/static/content/logo_mono.png" style="height: 30px" alt="Kooplex Hub"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
