--- a/kooplexhub/hub/templates/search.html
+++ b/kooplexhub/hub/templates/search.html
@@ -1,6 +1,10 @@
 {% if search_form %}
 <div class="card">
+  {% if search_form.extra %}
+  <form id="searchForm" class="form-horizontal form-control card-body" action="{% url search_form.action search_form.extra %}" method="post">
+  {% else %}
   <form id="searchForm" class="form-horizontal form-control card-body" action="{% url search_form.action %}" method="post">
+  {% endif %}
     {% csrf_token %}
     <h6 class="card-header">Narrow selection</h6>
     <div class="card-body">
