--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -91,6 +91,14 @@ a.active {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+th>a {
+  color: #f1f1f1;
+  text-decoration: none;
+}
+th>a:hover {
+  color: #808080;
+  text-decoration: none;
+}
     </style>
   </head>
 
