--- a/kooplexhub/hub/templates/menuitem_container.html
+++ b/kooplexhub/hub/templates/menuitem_container.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <li class="nav-item {{ active }}">
-     <a href="{% url 'service:list' %}" class="nav-link" data-toggle="tooltip" title="List and manage your service environments, also know as containers" data-placement="bottom">Environments</a>
+     <a href="{% url 'service:list' %}" class="nav-link">Environments</a>
   </li>
   <div class="dropdown-content" aria-labelledby="navbarDropdownContainer">
     <a href="#" data-toggle="modal" data-target="#container-new">New environment</a>
