--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -1,10 +1,11 @@
 <div class="dropdown">
   <li class="nav-item {{ active }}">
-    <a href="{% url 'service_external:filesync' %}" class="nav-link" data-toggle="tooltip" title="Manage file synchronization, version control and storage area" data-placement="bottom">Resources</a>
+    <a href="{% url 'service_external:filesync' %}" class="nav-link">Resources</a>
   </li>
   <div class="dropdown-content" aria-labelledby="navbarDropdownContainer">
     <a href="{% url 'service_external:versioncontrol' %}">Version control</a>
     <a href="{% url 'service_external:filesync' %}">Synchronization</a>
+    <a href="{% url 'indexpage' %}">Data source</a>
   </div>
 </div>
 
