--- a/kooplexhub/hub/templates/container/manage.html
+++ b/kooplexhub/hub/templates/container/manage.html
@@ -2,25 +2,14 @@
 
 {% load render_table from django_tables2 %}
 
-{% comment %}
-FIXME: styling info in layout?
-{% endcomment %}
-
 {% block header_extra %}
-{% load staticfiles %}
-
-<!--script src="https://kit.fontawesome.com/27d0a7c7d0.js"></script-->
-<link rel="stylesheet" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
-
-<link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
-<script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
+ {% load staticfiles %}
+ <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
 {% endblock %}
 
 
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">Configure service environment {{ container.name }}</span></h5>
-</div>
+  {% include 'container/service_submenu.html' with title="Configure service environment" %}
 {% endblock %}
 
 {% block main_content_center %}
@@ -86,4 +75,8 @@ FIXME: styling info in layout?
 </div>
 
 </form>
+{% endblock %}
+
+{% block main_content_right %}
+  {% include 'container/hint_config.html' %}
 {% endblock %}
