--- a/kooplexhub/hub/templates/menuitem_project.html
+++ b/kooplexhub/hub/templates/menuitem_project.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <li class="nav-item {{ active }}">
-    <a href="{% url 'project:list' %}" class="nav-link" data-toggle="tooltip" title="List and manage your projects" data-placement="bottom">Projects</a>
+    <a href="{% url 'project:list' %}" class="nav-link">Projects</a>
   </li>
   <div class="dropdown-content" aria-labelledby="navbarDropdownProject">
 {% if user.profile.can_createproject %}
