--- a/kooplexhub/hub/templates/service/service_submenu.html
+++ b/kooplexhub/hub/templates/service/service_submenu.html
@@ -4,12 +4,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSubmenu">
      <div class="col-3">
-        <h5><span class="badge badge-secondary" style="margin-right: 50px">External services</span></h5>
+        <h5><span class="badge badge-secondary" style="margin-right: 50px">Resources</span></h5>
      </div>
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a {% if submenu == 'versioncontrol' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'service_external:versioncontrol' %}" {% endif %}>Version control</a></li>
           <li class="nav-item"><a {% if submenu == 'filesync' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'service_external:filesync' %}" {% endif %}>File synchronization</a></li>
+          <li class="nav-item"><a {% if submenu == 'datasource' %} class="nav-link" href="#" {% else %} class="nav-link" href="{% url 'indexpage' %}" {% endif %}>Data source</a></li>
         </ul>
      </div>
   </div>
