--- a/kooplexhub/hub/templates/external_service/filesynchronization.html
+++ b/kooplexhub/hub/templates/external_service/filesynchronization.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block submenu %}
-  {% include "service/service_submenu.html" with submenu="filesync" %}
+  {% include "external_service/service_submenu.html" with submenu="filesync" %}
 {% endblock %}
 
 {% block main_content_center %}
@@ -14,35 +14,40 @@
     <h3>Connected services</h3>
     {% for s in syncservers %}
       {% with t=s|get_userz_fstoken:user %}
-        <div class="card bg-light mb-3">
-          <div class="card-header">
-            <div class="row">
-              <div class="col-8">
+        <div class="panel panel-default card bg-light mb-3">
+	  <div class="panel-heading card-header" role="tab" id="heading-{{ s.id }}">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ s.id }}" aria-expanded="true" aria-controls="collapse-{{ s.id }}">
                 {% if s.backend_type == s.TP_SEAFILE %}
 	          <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login Seafile at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
                 {% else %}
                   <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login {{s.backend_type }} at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
                 {% endif %}
                 <span class="badge badge-pill badge-secondary">{{ s.url }}</span>
+		<div style="float: right;">
+                {% if t %}
+                  <a href="{% url 'service_external:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a>
+                {% else %}
+                  <a href="#" role="button" class="btn btn-secondary disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a>
+                {% endif %}
+		</div>
+            </a>
+          </div>
+          <div id="collapse-{{ s.id }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-{{ s.id }}">
+            <div class="panel-body" style="padding: 1ex;">
                 {% if t %}
                   <span class="badge badge-pill badge-info">Last updated: {{ t.last_used }}</span>
                 {% else %}
                   <span class="badge badge-pill badge-warning">Make sure you login to Seafile server so your account exists there as well</span>
                 {% endif %}
-              </div>
-              <div class="col-2">
+              <div style="float: right;">
                 {% if t %}
-                  <a href="{% url 'service_external:fs_resettoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
+                  <a href="{% url 'service_external:fs_droptoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Drop token" data-placement="top">Drop token</a>
+                  <a href="{% url 'service_external:fs_resettoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a>
                 {% else %}
-                  <a href="{% url 'service_external:fs_newtoken' s.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
+                  <a href="#" role="button" class="btn btn-danger disabled" data-toggle="tooltip" title="Drop token" data-placement="top">Drop token</a>
+                  <a href="{% url 'service_external:fs_newtoken' s.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a>
                 {% endif %}
-              </div>
-              <div class="col-2">
-                {% if t %}
-                  <a href="{% url 'service_external:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
-                {% else %}
-                  <a href="#" role="button" class="btn btn-disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a> <br style="margin:1ex">
-                {% endif %}
+		<br>
               </div>
             </div>
           </div>
@@ -59,10 +64,23 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
     </div>
   </form>
-
 {% endblock %}
 
+
 {% block main_content_right %}
-  {% include 'service/hint_sync.html' %}
+  {% include 'external_service/hint_sync.html' %}
+{% endblock %}
+
+
+{% block scripts %}
+<script>
+$(".panel-heading").parent('.panel').hover(
+  function() {
+    $(this).children('.collapse').collapse('show');
+  }, function() {
+    $(this).children('.collapse').collapse('hide');
+  }
+);
+</script>
 {% endblock %}
 
