--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -1,6 +1,7 @@
 {% include 'about.html' %}
 {% if user.is_authenticated %}
   {% include 'bio.html' %}
+  {% include 'usertokens.html' %}
 {% endif %}
 
 <ul class="navbar-nav navbar-right">
@@ -22,7 +23,7 @@
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}">Logout <span class="oi oi-account-logout"></span></a>
       <a href="#" data-toggle="modal" data-target="#update-bio">Update bio</a>
-      <a href="{% url 'user:managetokens' next_page %}">Manage secrets</a>
+      <a href="#" data-toggle="modal" data-target="#reset-token">Manage secrets</a>
       <div class="dropdown-divider"></div>
     {% endif %}
       <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a>
