--- a/kooplexhub/hub/templates/usertokens.html
+++ b/kooplexhub/hub/templates/usertokens.html
@@ -1,35 +1,22 @@
-{% extends "layout.html" %}
-
-{% load render_table from django_tables2 %}
-
-{% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">Manage secrets</span></h5>
-</div>
-{% endblock %}
-
-{% block main_content_center %}
-  <h2 class="card-title">Service Tokens</strong>  </h2>
-<form class="form-horizontal" action="{% url 'user:managetokens' next_page %}" method="post">
-  {% csrf_token %}
-   <div class="card bg-light mb-3">
-       <div class="card-header">
-          <h4> Notebook servers</h4>
-          <div class="row">
-             <div class="col-10">
-                <p>You can request a new token to access your notebook servers:
-                </p>
-             </div>
-             <div class="col-2">
-                <button class="btn btn-danger" name="button" value="reset_notebook_token">Reset token</button>
-             </div>
-          </div>
-       </div>
-   </div>
-  <div class="modal-footer">
-    <button type="submit" class="btn btn-default" name="button" value="apply"> Save changes</button>
-    <button class="btn btn-default">Cancel</button>
-  </div>
-</form>
-{% endblock %}
-
+<div class="modal fade" id="reset-token" tabindex="-1" role="dialog" aria-labelledby="titleResetToken" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="titleResetToken">Manege secrets</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form id="reset_token" class="form-horizontal" action="{% url 'user:managetokens' next_page %}" method="post">
+      {% csrf_token %}
+        <div class="modal-body">
+          You can request a new token to access your notebook servers
+        </div>     <!-- modal-body -->
+        <div class="modal-footer">
+	  <button class="btn btn-danger" name="button" value="reset_notebook_token">Reset token</button>
+          <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+      </form>
+    </div>       <!-- modal-content -->
+  </div>         <!-- modal-dialog -->
+</div>           <!-- modal -->
