--- a/kooplexhub/hub/templates/project/new.html
+++ b/kooplexhub/hub/templates/project/new.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="project-new" tabindex="-1" role="dialog" aria-labelledby="titleNewProject" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="titleNewProject">Describe your new project</h5>
